--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
   "minimum-stability": "stable",
   "autoload": {
     "psr-4": {
-      "SimplePhp\\SimpleCrud\\": "src"
+      "SimplePhp\\SimpleCrud\\": "src",
+      "ExamplesPhp\\": "examples"
     },
     "files": [
       "src/Config.php"
