Adicionando libs para auxílio no controle de qualidade

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 /vendor
 /.env.php
 /.tool-versions
+.idea
+.vscode
+.phpunit_report
+phpunit-coverage-result.xml
+phpunit-execution-result.xml
+phpmd.html
+phpstan.log
