--- a/composer.json
+++ b/composer.json
@@ -12,17 +12,40 @@
       "name": "Rodrigo Yuri",
       "email": "rodrigo33996@gmail.com",
       "role": "Developer"
+    },
+    {
+      "name": "Mateus Vidal Marinho",
+      "email": "contato@mateusvidalmarinho.dev",
+      "role": "Developer"
     }
   ],
   "minimum-stability": "stable",
   "autoload": {
     "psr-4": {
       "SimplePhp\\SimpleCrud\\": "src",
+      "SimplePhp\\SimpleCrud\\Tests\\": "tests",
       "ExamplesPhp\\": "examples"
     },
     "files": [
       "src/Config.php"
     ]
   },
-  "require": {}
+  "require": {
+    "php": ">=8.3"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^11.4",
+    "phpstan/phpstan": "^2.0",
+    "phpstan/phpstan-strict-rules": "^2.0",
+    "squizlabs/php_codesniffer": "^3.11",
+    "phpmd/phpmd": "^2.15"
+  },
+  "scripts": {
+    "tests": "./vendor/bin/phpunit tests",
+    "cs": "./vendor/bin/phpcs --standard=phpcs.xml",
+    "cbf": "./vendor/bin/phpcbf --standard=phpcs.xml",
+    "export-tests": "XDEBUG_MODE=coverage ./vendor/bin/phpunit --coverage-clover=phpunit-coverage-result.xml --log-junit=phpunit-execution-result.xml --coverage-html .phpunit_report",
+    "stan": "vendor/bin/phpstan analyse -c phpstan.neon > phpstan.log",
+    "md": "vendor/bin/phpmd src html phpmd.xml > phpmd.html"
+  }
 }
